# shelly

./: Cargo.toml  go.mod  readme.md  shelly.json  test_payload.go
cmd/shelly/: main.go
pkg/config/: config.go
pkg/network/: network.go
pkg/serve/: serve.go
pkg/session/: session.go
pkg/shell/: listener.go
pkg/toolbox/: toolbox.go
pkg/ui/: ui.go
shelly-rs/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  PLAN.md  TEST_SESSIONS.md  readme.md  shelly.json
shelly-rs/src/: config.rs  helpers.rs  main.rs  serve.rs  session.rs  shell.rs  shell.rs.bak  upgrade.rs
src/: config.rs  helpers.rs  main.rs  serve.rs  shell.rs
