[package]
name = "shelly"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
dirs = "6.0.0"
indicatif = "0.18.0"
json = "0.12.4"
nix = "0.30.1"
pnet = "0.35.0"
reqwest = {version="0.12.24", features = ["blocking", "rustls-tls"] }
terminal-menu = "3.1.0"
termios = "0.3.3"